fix: baseline & logo overlap

--- a/src/layouts/main/index.module.css
+++ b/src/layouts/main/index.module.css
@@ -41,20 +41,23 @@
 	border-bottom: 1px solid var(--color-gray-300);
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: baseline;
+	align-content: center;
 }
 
-.mainHeader > *:first-child {
-	flex: 0 0 0;
-	width: 0;
-	align-self: flex-start;
+.sideMargin {
+	flex: 1;
 }
 
 .nav {
 	display: flex;
-	flex: 1 0 0;
 	justify-content: center;
+	align-items: baseline;
 	gap: 48px;
+	margin-left: 48px;
+	margin-right: 48px;
+	flex-wrap: wrap;
+	text-align: center;
 }
 
 .logoLink {
